# fastapi-backend-template

./: .gitignore  LICENSE  README.md  README.md.jinja  copier.yml  docker-compose.yml  load_dotenv.py  local.env  local.env.jinja  pyproject.toml  {% if include_precommit %}.pre-commit-config.yaml{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
alembic/: env.py
alembic/versions/: 14564fe88741_create_blog_table.py  dbd47e39e869_create_use_table.py
deployment/: Dockerfile  docker-compose.yml  docker-compose.yml.jinja
src/: __init__.py  configurations.py  crud.py  database.py  main.py  main.py.jinja  security.py
src/database/: __init__.py  dependencies.py
src/database/models/: blogs.py  users.py
src/models/: blogs.py  users.py
src/routers/: blogs.py  comments.py  posts.py  token.py  users.py
src/schemas/: blogs.py  comments.py  posts.py  token.py  user.py
