[tool.poetry]
name = "fastapi-backend-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.2.2"
isort = "^5.13.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
